<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/general_header">

        <EditTextPreference
            app:iconSpaceReserved="false"
            app:key="home_url"
            app:title="@string/home_url_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="fullscreen"
            app:summary="Requires restarting the app"
            app:title="@string/fullscreen_title" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/misc_header">

        <SwitchPreferenceCompat
            app:iconSpaceReserved="false"
            app:key="back_button_remembers_history"
            app:title="@string/back_button_remembers_history_title" />

    </PreferenceCategory>

</PreferenceScreen>